# trendlab

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  verify_functional.py
.github/workflows/: deploy.yml
deploy/: README.md
deploy/helm/: values-dev.yaml  values-hml.yaml  values-prd.yaml
deploy/helm/trendlab/: Chart.yaml  values.yaml
deploy/helm/trendlab/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
github/desafio-san-giorgio-code/: Desafio-San-Giorgio.md  start.bat  start.sh  stop.bat  stop.sh
github/desafio-san-giorgio-code/compose/: docker-compose.yml  init-aws.sh
github/desafio-san-giorgio-code/san-giorgio-api/: build.gradle
github/desafio-san-giorgio-code/san-giorgio-api/src/main/resources/: application.yml
github/desafio-san-giorgio-code/san-giorgio-api/src/test/resources/: application-test.yml
infra/: README.md
infra/envs/dev/: main.tf
infra/envs/hml/: main.tf
infra/envs/prd/: main.tf
infra/modules/aws-eks/: main.tf
infra/modules/azure-aks/: main.tf
infra/modules/k8s-addons/: main.tf
tests/: test_analytics.py
trendlab/: __init__.py
trendlab/analytics/: engine.py  features.py  reporting.py
trendlab/api/: main.py
trendlab/application/: pipeline.py
trendlab/cli/: main.py
trendlab/domain/: models.py  ports.py
trendlab/infrastructure/: coingecko.py  storage.py
trendlab/utils/: logging.py
vex/trendlab/.github/workflows/: ci.yml
(+20 files in other folders)
