[tool.poetry]
name = "trendlab"
version = "0.1.0"
description = "Production-grade crypto market intelligence pipeline."
authors = ["Engineering Team <engineering@trendlab.local>"]
readme = "README.md"
packages = [{include = "trendlab"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
pyarrow = "^15.0.0"
fastparquet = "^2023.10.0"
rich = "^13.7.0"
jinja2 = "^3.1.0"
joblib = "^1.3.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pandas-stubs = "^2.1.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
trendlab = "trendlab.cli.main:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
